tests/paczka1/fuzzy1/14634908.err
Error in line 19: Lv5G5Efo S634 78,9
Error in line 20: A421 S685 32,7
Error in line 1: He6NlGGIe3L S634 37,4
Error in line 25: He6NlGGIe3L A232 70,9
Error in line 9: 61w1HuHn2I3 S634 165,7
Error in line 29: 61w1HuHn2I3 A232 73,4
Error in line 28: ARDFkgxb8 S634 85,1
Error in line 27: He6NlGGIe3L S634 78,5
